tests/parser/fixtures/preprocessor/errors/error9.cpp
#include <tests/parser/fixtures/preprocessor/errors/assert_include.h>
#include <tests/parser/fixtures/preprocessor/errors/assert_include_2.h>
/* #include <src/poof/output/stream_and_cursor_counted_string.h> */
